[package]
name = "breathes"
version = "0.1.0"
edition = "2024"
description = "A library to check source code"
license = "AGPL-3.0"
repository = "https://github.com/hackia/breathes"
[dependencies]
inquire = "0.9.1"
hunspell-rs = "0.4.0"
regex = "1.12.2"
once_cell = "1.21.3"
tabled = { version = "0.20.0", features = ["derive"] }
spinners = "4.1.1"
crossterm = "0.29.0"
glob = "0.3.3"
